--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 services:
  - docker
 before_install:
- - docker build -t imrabhinav/docker-react -f Dockerfile.dev .
+ - docker build -t ashish-abhinav/docker-react -f Dockerfile.dev .
 
 
 script:
