--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 script:
  #- docker run imrabhinav/docker-react npm run test -- --coverage
  - docker run -e CI=true ashish-abhinav/docker-react npm run test
+
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app : "docker"
+  env : "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-766916769960"
+  bucket_path : "docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
